--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" content="text/html">
     <title>Wes Hediger</title>
-
+    <link rel="stylesheet" type="text/css" href="wes-hediger-style.css">
   </head>
   <body>
-    <h1>Hello world!</h1>
+    <h1>Wes Hediger</h1>
 
     <!--needs to have two pages linked with anchor tags
       one- describes where I come from and who I am
