add me and thoughtbubble

--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Wes Hediger</h1>
+    <div id="thoughtBubble"></div>
+    <div id="giff"></div>
+    <div id="mePic"></div>
 
     <!--needs to have two pages linked with anchor tags
       one- describes where I come from and who I am
