add content and format

--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -10,6 +10,18 @@
     <div id="thoughtBubble"></div>
     <div id="giff"></div>
     <div id="mePic"></div>
+    <a href="future.html">
+      <div class="button" id="future-button">My Future Hopes</div>
+    </a>
+    <div class="button" id="about-button">Hide About Me</div>
+    <div id="about-me">I was born and have lived in Colorado most of my life. My first interest
+      in programming computers was in 5th grade. I studied computer science at
+      UNC. I've also lived in
+      an art gallery on Santa Fe, run small businesses
+      and lived in an isolated cabin in the mountains. Most recently I ran
+       Stella’s Coffee House and started going camping. I enjoy
+       learning/experiencing new things and I like to cook but closer to the
+       truth is that I love to eat!</div>
 
     <!--needs to have two pages linked with anchor tags
       one- describes where I come from and who I am
