add jquery to toggle about me

--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" content="text/html">
     <title>Wes Hediger</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="wes-hediger-js.js"></script>
     <link rel="stylesheet" type="text/css" href="wes-hediger-style.css">
   </head>
   <body>
@@ -13,7 +15,7 @@
     <a href="future.html">
       <div class="button" id="future-button">My Future Hopes</div>
     </a>
-    <div class="button" id="about-button">Hide About Me</div>
+    <div class="button" id="hide-button">Show / Hide</div>
     <div id="about-me">I was born and have lived in Colorado most of my life. My first interest
       in programming computers was in 5th grade. I studied computer science at
       UNC. I've also lived in
@@ -24,13 +26,13 @@
        truth is that I love to eat!</div>
 
     <!--needs to have two pages linked with anchor tags
-      one- describes where I come from and who I am
+      DONE/////one- describes where I come from and who I am
         (i.e., hometown, favorites, siblings, hobbies, etc.)
       two- describe where I am going in life and who I will become
         (i.e., career goals, gSchool goals, hopes, dreams, etc.)
         see- https://github.com/whediger/prework/tree/master/6_personal-project
           for examples -->
-    <!--custom CSS- include external linked stylesheet with custom CSS
+    <!--DONE/////custom CSS- include external linked stylesheet with custom CSS
       design should represent my personality -->
     <!--Use JQuery- create button to change something on the site when user clicks
       it must be handled using JQuery. -> .on('click', function(){do something}) -->
