--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta charset="utf-8" content="text/html">
+    <meta charset="utf-8">
     <title>Wes Hediger</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="wes-hediger-js.js"></script>
