fail to add working content to page 2

--- a/future.html
+++ b/future.html
@@ -2,9 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="future.css"></link>
+    <script src="future.js"></script>
   </head>
   <body>
-
-  </body>  
+    <div id="background-road"></div>
+    <div id="child-future"></div>
+    <div id="the-future">In The Future...</div>
+    <div id="only-thing">the only thing that is certain is change and…</div>
+    <div id="info-age">we are living during the birth</br>of the Information Age</div>
+    <div id="intercon"></div>
+    <div id="transform">Computers are transforming</br>the way we interact with everything</div>
+    <div id="interface"></div>
+    <div id="the-way">The way we interact with computers will change</br>
+                        in some cool but somewhat predictable ways.</br>
+                        But as a technology matures…</div>
+    <div id="pill"></div>
+    <div id="form">It’s form and function merge until</br>
+                  there is no difference between the two and</br>
+                  we are able to use it on a completely intuitive level</br>
+                  because the interface is our natural environment.</br>
+                  <span class="ital"> There are now computers you can swallow to monitor your health.</span></div>
+    <div id="robo-head"></div>
+    <div id="human-nature">In our lifetime we will interact with machines</br>
+                  that appeal to our human nature…</div>
+    <div id="people-machines"></div>
+    <div id="moral">and need to solve moral dilemmas</br>
+                  humans have never faced before</div>
+    <div id="course">Of course, in the future there will still be trees…</div>
+    <div id="trees"></div>
+    <div id="in-fact">In Fact...</div>
+    <div id="drone"></div>
+    <div id="more">There may be more trees than there</br>has been in thousands of years.</br>Like it or not…</div>
+  </body>
 </html>
