--- a/wes-hediger.html
+++ b/wes-hediger.html
@@ -13,7 +13,7 @@
     <div id="giff"></div>
     <div id="mePic"></div>
     <a href="future.html">
-      <div class="button" id="future-button">My Future Hopes</div>
+      <div class="button" id="future-button">My Future</div>
     </a>
     <div class="button" id="hide-button">Show / Hide</div>
     <div id="about-me">I was born and have lived in Colorado most of my life. My first interest
