--- a/future.html
+++ b/future.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="future.css"></link>
+    <title>Future</title>
+    <link rel="stylesheet" type="text/css" href="future.css">
 
   </head>
   <body>
     <a href="wes-hediger.html"><div id="back-button">Back</div></a>
     <div id="child-future"></div>
-    <div id="future">The only thing that is certain</br>in the future is change...</div>
+    <div id="future">The only thing that is certain<br>in the future is change...</div>
     <div id="internet"></div>
-    <div id="my-future">We are living during a transformative time</br>
-                        like when fire was invented only multiplied by:</br>
-              <span class="line">10 print “Hello World!”</br>
-              20 goto 10</span></br>
-              I am learning to program so I can</br>
-              interact, contribute, and celebrate the times I am living in.</br>
-              I am interested in how computers/devices communicate with each other,</br>
-              how they process information, how we interact with them,</br>
+    <div id="my-future">We are living during a transformative time<br>
+                        like when fire was invented only multiplied by:<br>
+              <span class="line">10 print “Hello World!”<br>
+              20 goto 10</span><br>
+              I am learning to program so I can<br>
+              interact, contribute, and celebrate the times I am living in.<br>
+              I am interested in how computers/devices communicate with each other,<br>
+              how they process information, how we interact with them,<br>
               how they present useful information and watching the whole thing unfold.</div>
   </body>
 </html>
