launched to firebase.com

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="wes-hediger-js.js"></script>
     <link rel="stylesheet" type="text/css" href="wes-hediger-style.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
   </head>
   <body>
     <h1>Wes Hediger</h1>
